# etching_simulations

./: notes.txt  vdb_tool_help.txt
cook/: CMakeLists.txt
cook/gridwrite/: CMakeLists.txt  cook_gridwrite.cxx
cook/hello/: build.sh
cook/makesphere/: CMakeLists.txt
cookbook/: test.cpp  test.ply  test.vdb
gds/: CMakeLists.txt  GDSProcessor.cpp  GDSProcessor.h  example_for_deven.geo  gds_data.cpp  gds_to_ply.cpp  main.cpp  test.cpp
gds_v2/: CMakeLists.txt  gds_to_ply.cpp
process/: Process.cxx  process.cxx
process/stl/: TJM_B013V1_pass1_mask.stl  TJM_B013V1_pmesa_mask.stl  TJM_B013V1_pmetal_mask.stl  TJM_B013V1_via_mask.stl
process/vdb/: TJM_B013V1_inter1_mask.vdb  TJM_B013V1_nmesa_mask.vdb  TJM_B013V1_pmesa_mask.vdb  TJM_B013V1_pmetal_mask.vdb
python_test/: example_for_deven.gds_metal.stl  example_for_deven.gds_substrate.stl  gdsiistl.py  output.txt  script.py  test.txt
src/: CMakeLists.txt  GDSProcessor.cpp  cube.cpp  main.cpp
src/.cache/clangd/index/: cube.cpp.9ED6B1BD6F87CF2E.idx  etch.cpp.2A1BE21A1677584D.idx
src/include/: GDSProcessor.h
temp/: vdb_manip.py
temp/cook/: newcook.py
temp/cook/hello/: cook_hello.cxx
temp/process/: CMakeLists.txt  mygrids.vdb  process01.cxx  tovdb.py
temp/process/stl/: TJM_B013V1_inter1_mask.stl  TJM_B013V1_nmesa_mask.stl  TJM_B013V1_pass1_mask.vdb  TJM_B013V1_probe_mask.stl
temp/process/vdb/: TJM_B013V1_pass1_mask.vdb  TJM_B013V1_probe_mask.vdb  TJM_B013V1_via_mask.vdb
test/: CMakeLists.txt  test.cpp
test/.cache/clangd/index/: test.cpp.2F26300E6FC164CB.idx
vdbtests/: CMakeLists.txt  etch.cpp
vdbtests/.cache/clangd/index/: cube.cpp.9ED6B1BD6F87CF2E.idx  etch.cpp.2A1BE21A1677584D.idx  gds_data.cpp.02404988A06B8991.idx
